# botagent

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: botagent_benchmark.rs
src/: errors.rs  lib.rs  pattern.rs  patterns.json
