[package]
name = "botagent"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A bot user agent detection library using regex patterns."
homepage = "https://github.com/nubilfi/botagent"
documentation = "https://docs.rs/botagent/latest/botagent"
repository = "https://github.com/nubilfi/botagent"
keywords = ["bot", "useragent", "detection", "regex", "pcre2"]
readme = "README.md"
exclude = [
  ".github/*",
  ".gitignore",
]

[dependencies]
once_cell = "1.19.0"
pcre2 = "0.2.9"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.12.0"

[[bench]]
name = "botagent_benchmark"
harness = false
